--- a/gin_demo/web06/f.tmpl
+++ b/gin_demo/web06/f.tmpl
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>Hello</title>
+    <title>自定义函数</title>
 </head>
 <body>
-{{.}}
+{{ kua . }}
 </body>
 </html>
